--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,100 @@
-body {
+/* secondary logo font */
+@import url('https://fonts.cdnfonts.com/css/baron-neue'); 
+@import url('https://fonts.cdnfonts.com/css/darker-grotesque');
+                
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Darker Grotesque', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  font-size: large;
+  color: #021E36;
+  background-color: #FEF5ED;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1, h2, h3 {
+  font-family: 'Darker Grotesque', sans-serif;
+  font-weight: 900;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* navbar components */
+
+.navbar,
+.container-fluid,
+.navbar-toggler,
+.togglerContainer,
+.collapse,
+.nav-item,
+.navbar-toggler-icon,
+.navbar-brand,
+.navbar-logo,
+.navbar-icons,
+#profileIcon,
+#cartIcon {
+  background-color: #FAB375;
+}
+
+.container-fluid {
+  display: flex;
+  justify-content: space-between;
+}
+
+.navbar-logo {
+  height: 50px;
+}
+
+.togglerContainer {
+  margin-right: 15%;
+}
+
+.nav-item {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#profileIcon {
+  margin: 10px;
+  font-size: 25px;
+}
+
+#cartIcon {
+  margin: 10px;
+  font-size: 25px;
+}
+
+@media (max-width: 992px) {
+  .togglerContainer {
+    order: 1;
+    margin-right: 10px;
+    padding-right: 0px;
+  }
+  .navbar-brand {
+    order: 2;
+  }
+  .navbar-icons {
+    order: 3;
+  }
+}
+
+@media (max-width: 844px) {
+  .navbar-logo {
+    height: 42px;
+  }
+  #profileIcon {
+    margin: 5px;
+    font-size: 20px;
+  }
+  #cartIcon {
+    margin: 7px;
+    font-size: 20px;
+  }
+}
+
