styling progress on navbar, login / reg, coffee detail pages

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,6 +34,38 @@ code {
   }
 }
 
+/* Reference */
+/* These components must be styled with inline JSX to override defaults */
+
+/* success button: */
+/* 
+  className="button" style={{
+  backgroundColor: "#75BCFA",
+  color: "#021E36",
+  fontWeight: 800,
+  border: "none",
+  borderRadius: "0px",
+  transition: "box-shadow 0.1s"
+  }} 
+*/
+
+/* input form */
+/* style={{
+  borderRadius: 0,
+  border: "1px solid #021E36"
+}} */
+
+
+/* Global Components */
+
+.button:hover {
+  box-shadow: #021E36 1px 1px 1px;
+}
+
+.arrow {
+  background-color: transparent;
+}
+
 /* navbar components */
 
 .navbar,
@@ -43,6 +75,7 @@ code {
 .togglerContainerUnauth,
 .collapse,
 .nav-item,
+.navlink-image,
 .navbar-toggler-icon,
 .navbar-brand,
 .navbar-logo,
@@ -50,6 +83,12 @@ code {
 #profileIcon,
 #cartIcon {
   background-color: #75BCFA;
+}
+
+.navbar {
+  background: linear-gradient(to bottom,
+  #75BCFA 5%, #75BCFA 90%,
+  #FEF5ED 95%, #FEF5ED 100%);
 }
 
 .container-fluid {
@@ -71,7 +110,7 @@ code {
 }
 
 .togglerContainerUnauth {
-  margin-right: 30%;
+  margin-right: 23%;
 }
 
 .nav-item {
@@ -86,6 +125,16 @@ code {
 .nav-link:hover {
   font-weight: 900;
   text-shadow: #FEF5ED 1px 1px 1px;
+}
+
+.navlink-image {
+  height: 20px;
+  margin-top: 15px;
+  transition: .25s;
+}
+
+.navlink-image:hover {
+  height: 21px;
 }
 
 #profileIcon,
@@ -115,6 +164,9 @@ code {
   .navbar-icons {
     order: 3;
   }
+  .navlink-image {
+    display: none;
+  }
 }
 
 @media (max-width: 844px) {
@@ -128,6 +180,12 @@ code {
   #cartIcon {
     margin: 7px;
     font-size: 20px;
+  }
+}
+
+@media (max-width: 381px) {
+  .navbar-logo {
+    height: 40px;
   }
 }
 
@@ -153,8 +211,16 @@ code {
   border: none;
 }
 
+#sortSelect {
+  border-radius: 0;
+}
+
 .sortLabel {
   padding-top: 8px;
+}
+
+.sortDropdown {
+  border-radius: 0;
 }
 
 @media (max-width: 992px) {
@@ -192,4 +258,69 @@ code {
 .card-text {
   background-color: #FEF5ED;
   text-align: center;
+}
+
+/* Coffee Detail */
+
+.coffeeDetailsContainer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.coffeeDetailsSelectionsContainer {
+  order: 1;
+  margin-top: 40px;
+  width: 600px;
+}
+
+.coffeeDetailsForm {
+  width: 100%;
+}
+
+.image-container {
+  order: 2;
+  margin-top: 25px;
+  max-width: 500px;
+}
+
+.coffeeDetailImage {
+  width: 100%;
+}
+
+.coffeeDetailsInfo {
+  margin-top: 20px;
+  margin-bottom: 50px;
+}
+
+.popover-inne {
+  border: 1px solid #FEF5ED;
+  border-radius: 0px;
+}
+
+.popover-body {
+  background-color: #FDE6FE;
+  
+}
+
+@media (max-width: 992px) {
+  .coffeeDetailsContainer {
+    flex-direction: column;
+    align-items: center;
+  }
+  .coffeeDetailImage {
+    order: 1
+  }
+  .coffeeDetailsSelectionsContainer {
+    order: 2;
+    max-width: 500px 
+  }
+}
+
+@media (max-width: 500px) {
+  .coffeeDetailsSelectionsContainer {
+    width: 300px;
+  }
+  .image-container {
+    width: 300px;
+  }
 }
