--- a/client/src/index.css
+++ b/client/src/index.css
@@ -72,6 +72,23 @@ code {
   font-size: larger;
 }
 
+.coffeeImageInList {
+  width: 200px;
+}
+
+.textDetailsInList {
+  font-size: x-large;
+}
+
+@media (max-width: 992px) {
+  .coffeeImageInList {
+    width: 100px;
+  }
+  .textDetailsInList {
+    font-size: large;
+  }
+}
+
 /* navbar components */
 
 .navbar,
@@ -91,12 +108,6 @@ code {
   background-color: #75BCFA;
 }
 
-.navbar {
-  background: linear-gradient(to bottom,
-  #75BCFA 5%, #75BCFA 90%,
-  #FEF5ED 95%, #FEF5ED 100%);
-}
-
 .container-fluid {
   display: flex;
   justify-content: space-between;
@@ -112,7 +123,7 @@ code {
 }
 
 .togglerContainer {
-  margin-right: 15%;
+  margin-right: 16.5%;
 }
 
 .togglerContainerUnauth {
@@ -155,6 +166,12 @@ code {
   font-size: 28px;
 }
 
+@media (max-width: 1300px) {
+  .togglerContainer {
+    margin-right: 1%;
+  }
+}
+
 @media (max-width: 992px) {
   .togglerContainer,
   .togglerContainerUnauth {
@@ -190,6 +207,74 @@ code {
 @media (max-width: 381px) {
   .navbar-logo {
     height: 35px;
+  }
+}
+
+/* Home page components */
+
+.home {
+  position: relative;
+}
+
+.headerImageContainer {
+  display: flex;
+  max-width: 100%;
+}
+
+.headerImageContainer img {
+  flex: 1;
+  max-width: 50%;
+}
+
+.headerButtonContainer {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  background-color: #FEF5ED;
+  padding: 20px;
+  transition: 0.25s
+}
+
+.headerButtonContainer:hover {
+  box-shadow: rgb(2, 30, 54, 0.3) 0 0 10px
+}
+
+.homeBottom {
+  display: flex;
+  max-width: 100%;
+}
+
+.homeBottom div {
+  flex: 1;
+  max-width: 50%;
+}
+
+.homeMapContainer,
+.emailSignupContainer {
+  padding: 40px;
+  text-align: center;
+}
+
+@media (max-width: 1100px) {
+  .homeHeaderContainer {
+    display: flex;
+    flex-direction: column;
+  }
+  .headerButtonContainer {
+    position: static;
+    top: auto;
+    left: auto;
+    transform: none;
+  }
+  .homeBottom {
+    flex-direction: column;
+    text-align: center;
+  }
+  .homeBottom div {
+    flex: 1;
+    max-width: 100%;
   }
 }
 
@@ -333,4 +418,19 @@ code {
   .image-container {
     width: 300px;
   }
+}
+
+/* Inventory Manager List */
+
+.inventoryListHeaderGroup {
+  display: flex;
+  justify-content: space-between;
+}
+
+.inventoryListHeader {
+  padding-bottom: 15px;
+}
+
+.inventoryListSort {
+  padding-top: 10px;
 }
