Admin order manager styling complete

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -102,6 +102,13 @@ code {
   background-color: #FFF;
 }
 
+.offcanvas-header,
+.offcanvas-title,
+.offcanvas-body,
+.offcanvas-backdrop {
+  background-color: transparent;
+}
+
 @media (max-width: 992px) {
   .coffeeImageInList {
     width: 100px;
