--- a/client/src/index.css
+++ b/client/src/index.css
@@ -102,11 +102,31 @@ code {
   background-color: #FFF;
 }
 
+.offcanvas {
+  background-color: transparent;
+}
+
 .offcanvas-header,
 .offcanvas-title,
 .offcanvas-body,
 .offcanvas-backdrop {
   background-color: transparent;
+}
+
+/* overrides the offcanvas animation which otherwise bugs out because bootstrap is mad with me for changing so much */
+.offcanvas-backdrop {
+  animation-duration: .25s;
+  animation-timing-function: ease-in-out;
+  animation-name: custom-fade;
+}
+
+@keyframes custom-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @media (max-width: 992px) {
